// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonTable component should render correctly 1`] = `
<Table
  aria-label="Loading"
>
  <Thead>
    <Tr>
      <Th
        key="0"
      >
        <Skeleton />
      </Th>
    </Tr>
  </Thead>
  <Tbody>
    <Tr
      key="0"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="1"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="2"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="3"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="4"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
    </Tr>
  </Tbody>
</Table>
`;

exports[`SkeletonTable component should render correctly with checkboxes 1`] = `
<Table
  aria-label="Loading"
>
  <Thead>
    <Tr>
      <Th
        key="0"
      >
        first
      </Th>
      <Th
        key="1"
      >
        second
      </Th>
    </Tr>
  </Thead>
  <Tbody>
    <Tr
      key="0"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="1"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="2"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="3"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="4"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
  </Tbody>
</Table>
`;

exports[`SkeletonTable component should render correctly with radio buttons 1`] = `
<Table
  aria-label="Loading"
>
  <Thead>
    <Tr>
      <Th
        key="0"
      >
        first
      </Th>
      <Th
        key="1"
      >
        second
      </Th>
    </Tr>
  </Thead>
  <Tbody>
    <Tr
      key="0"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="1"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="2"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="3"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="4"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
  </Tbody>
</Table>
`;

exports[`SkeletonTable component should render correctly with static columns 1`] = `
<Table
  aria-label="Loading"
>
  <Thead>
    <Tr>
      <Th
        key="0"
      >
        first
      </Th>
      <Th
        key="1"
      >
        second
      </Th>
    </Tr>
  </Thead>
  <Tbody>
    <Tr
      key="0"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="1"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="2"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="3"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="4"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
      <Td
        key="1"
      >
        <Skeleton />
      </Td>
    </Tr>
  </Tbody>
</Table>
`;

exports[`SkeletonTable component should render correctly without rows 1`] = `
<Table
  aria-label="Loading"
>
  <Thead>
    <Tr>
      <Th
        key="0"
      >
        <Skeleton />
      </Th>
    </Tr>
  </Thead>
  <Tbody>
    <Tr
      key="0"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="1"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="2"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="3"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
    </Tr>
    <Tr
      key="4"
    >
      <Td
        key="0"
      >
        <Skeleton />
      </Td>
    </Tr>
  </Tbody>
</Table>
`;
